log
Thu Apr 16 07:58:56 PM UTC 2026: 
 tests:  0|7
total_score: 0/60
1f52835
Thu Apr 16 08:13:27 PM UTC 2026: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:78:28: error: expected ‘;’ before ‘}’ token
   78 |                 posicion+=1
      |                            ^
      |                            ;
   79 |             }
      |             ~               
28b13bb
Thu Apr 16 08:13:38 PM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|7
total_score: 0/60
86ae79b
Thu Apr 16 08:17:51 PM UTC 2026: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  3|6
total_score: 10/60
f0f75e2
Thu Apr 16 08:24:19 PM UTC 2026: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:10: error: unused variable ‘posicion2’ [-Werror=unused-variable]
   63 |     long posicion2 = posicion;
      |          ^~~~~~~~~
cc1: all warnings being treated as errors
590e8c8
Thu Apr 16 08:24:31 PM UTC 2026: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  3|6
total_score: 10/60
594d0b8
Sun Apr 19 01:05:26 AM UTC 2026: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
2d116d5
Sun Apr 19 01:06:40 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
e33f2de
Sun Apr 19 01:07:06 AM UTC 2026: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/60
7e6a60f
Sun Apr 19 01:08:28 AM UTC 2026: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘insertMap’:
hashmap.c:97:17: error: expected ‘;’ before ‘return’
   97 |     map->size+=1
      |                 ^
      |                 ;
   98 |     return;
      |     ~~~~~~       
bd9bb7a
Sun Apr 19 01:08:41 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
05557e8
Sun Apr 19 02:24:13 AM UTC 2026: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:130:18: error: invalid initializer
  130 |     for(Pair i = map->buckets[0]; i== NULL; i = nextMap(map))
      |                  ^~~
hashmap.c:130:36: error: invalid operands to binary == (have ‘Pair’ and ‘void *’)
  130 |     for(Pair i = map->buckets[0]; i== NULL; i = nextMap(map))
      |                                    ^~
hashmap.c:130:49: error: incompatible types when assigning to type ‘Pair’ from type ‘Pair *’
  130 |     for(Pair i = map->buckets[0]; i== NULL; i = nextMap(map))
      |                                                 ^~~~~~~
hashmap.c:132:18: error: invalid operands to binary != (have ‘Pair’ and ‘void *’)
  132 |             if(i != NULL)
      |                  ^~
hashmap.c:134:24: error: incompatible types when returning type ‘Pair’ but ‘Pair *’ was expected
  134 |                 return i;
      |                        ^
42f0234
Sun Apr 19 02:27:29 AM UTC 2026: 
 hashmap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:131:12: error: ‘true’ undeclared (first use in this function)
  131 |     while (true)
      |            ^~~~
hashmap.c:9:1: note: ‘true’ is defined in header ‘<stdbool.h>’; this is probably fixable by adding ‘#include <stdbool.h>’
    8 | #include "hashmap.h"
  +++ |+#include <stdbool.h>
    9 | 
hashmap.c:131:12: note: each undeclared identifier is reported only once for each function it appears in
  131 |     while (true)
      |            ^~~~
27d031a
Sun Apr 19 02:27:41 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
317aa20
Sun Apr 19 02:29:21 AM UTC 2026: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 20/60
6ae7489
Sun Apr 19 02:30:49 AM UTC 2026: 
 hashmap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:138:33: error: expected ‘;’ before ‘return’
  138 |                 map->current = i
      |                                 ^
      |                                 ;
  139 |                 return map->buckets[i];
      |                 ~~~~~~           
02b9415
Sun Apr 19 02:30:57 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|4
total_score: 20/60
ac953fe
Sun Apr 19 02:32:40 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
hashmap.c: In function ‘firstMap’:
hashmap.c:136:32: error: comparison between pointer and integer [-Werror]
  136 |             if(map->buckets[i] != -1)
      |                                ^~
cc1: all warnings being treated as errors
d358095
Sun Apr 19 02:36:30 AM UTC 2026: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  7|4
total_score: 20/60
a2bc953
Sun Apr 19 02:44:08 AM UTC 2026: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  7|4
total_score: 20/60
4c5a1bf
Sun Apr 19 02:44:39 AM UTC 2026: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 20/60
c0f1888
Sun Apr 19 02:45:25 AM UTC 2026: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 30/60
93cc7d5
